actualizare proiect final

--- a/Meniu restaurant admin/modifica.html
+++ b/Meniu restaurant admin/modifica.html
@@ -78,7 +78,7 @@
                 method: "put",
                 body: JSON.stringify(obj)
             });
-            location.href = "Restaurant menu admin.html";
+            location.href = "bazar.html";
         }
 
     </script>
