--- a/PROIECT FINAL/admin.html
+++ b/PROIECT FINAL/admin.html
@@ -10,42 +10,47 @@
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
     <style>
-        .backgroundWeb {
+        .container {
             max-width: 80%;
             margin: 0 auto;
         }
 
         #topBar {
-            margin-top: 10px;
-            display: grid;
-            grid-template-columns: 6.5fr 1fr 1fr;
-            grid-column-gap: 20px;
-            margin-bottom: 20px;
+            display: flex;
+            flex-wrap: wrap;
+            height: 60px;
+            margin-top:10px;
+            border-radius: 5px;
+            background-color: rgb(0, 94, 184);
         }
 
         #topBar #title1 {
             font-family: Verdana, Geneva, Tahoma, sans-serif;
-            height: 30px;
-            margin: 5px;
+            margin: 8px 25px;
             font-size: 30px;
-
+            color: white;
+            text-decoration: none;
         }
 
+
         #topBar #shopButton {
-            width: 200px;
-            background-color: rgb(44, 154, 228);
-            border: none;
-            border-radius: 5px;
             color: white;
             font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-            font-size: 20px;
-
-
+            font-size: 25px;
+            text-decoration: none;
+            margin: auto;
+            text-align: center;
         }
 
         #toFirstPage {
             text-decoration: none;
             color: black
+        }
+
+        #topBar #shopButton #cartImg {
+            height: 20px;
+            color: white;
+            margin-right: 10px;
         }
 
         .adminTitle2 {
@@ -64,94 +69,109 @@
             font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
             font-size: 20px;
             float: right;
+        }
 
+        .nine.columns {
+            height: 60px;
+        }
+
+        .three.columns {
+            margin: auto;
+            margin-right: 25px;
         }
 
         .imgProd {
             max-width: 30px;
         }
 
-        #imgProp{
-            text-align:center;
+        #imgProp {
+            text-align: center;
         }
 
         .delBut {
             border: none;
             background: none;
-            color:  rgb(44, 154, 228);
+            color: rgb(44, 154, 228);
         }
 
         .modBut {
             border: none;
             background: none;
-            color:  rgb(44, 154, 228);
+            color: rgb(44, 154, 228);
         }
     </style>
 
     <script>
         async function drawT() {
-  
-            var response = await fetch(`https://proiect-final-andi.firebaseio.com/cos/.json`);
+
+            var response = await fetch(`https://proiect-final-andi.firebaseio.com/produse/.json`);
             window.list = await response.json();
             var str = "";
 
             for (var i in list) {
-                if (list[i] === null) continue ;
+                if (list[i] === null) continue;
                 str += ` 
                             <tr>
                                 <th id="imgProp" scope="row" name="imagine"> <img class="imgProd" src="${list[i].imagine}" alt="${list[i].nume}"></th>
                                 <th scope="row" name="nume"><a href="detalii.html?id=${i}">${list[i].nume} </a></th>
                                 <td name="pret">${list[i].pret} <span>Lei</span></td>
-                                <td name="cantitate">${list[i].cantitate}</td> 
+                                <td name="cantitate">${list[i].stoc}</td> 
                                 <td>
-                                    <input type="button" value="Modifica" class="modBut" onclick="modifica()">
+                                    <input type="button" value="Modifica" class="modBut" onclick="location.href='modifica.html?id=${i}'" onsubmit="">
                                     <input type="button" value="Sterge" class="delBut" onclick="sterge(event,'${i}')">
                                 </td>
                                
                             </tr>
-            `  
+            `
             }
             document.querySelector("#drawTable table tbody").innerHTML = str;
         }
 
         async function sterge(event, i) {
-            var response = await fetch(`https://proiect-final-andi.firebaseio.com/cos/${i}.json`, {
+            var response = await fetch(`https://proiect-final-andi.firebaseio.com/produse/${i}.json`, {
                 method: "delete",
             });
             alert("Esti sigur ca vrei sa stergi acest produs");
             drawT();
         }
-       
+
 
     </script>
 
 </head>
 
 <body onload="drawT()">
-    <div class="backgroundWeb">
-        <div id="topBar">
-            <a href="bazar.html" id="toFirstPage">
-                <p id="title1">Bazar la Andi</p>
-            </a>
-            <button id="shopButton" onclick="location.href='coscumparaturi.html'"> <svg
-                    xmlns="http://www.w3.org/2000/svg" xml:space="preserve" width="10.7963mm" height="5mm" version="1.1"
-                    style="shape-rendering:geometricPrecision; text-rendering:geometricPrecision; image-rendering:optimizeQuality; fill:white; fill-rule:evenodd; clip-rule:evenodd"
-                    xmlns:xlink="http://www.w3.org/1999/xlink">
-                    <defs>
+    <div class="container">
+        <div id="topBar" class="row">
+            <div class="nine columns">
+                <a href="bazar.html" id="toFirstPage">
+                    <p id="title1">Andi`s Market</p>
+                </a>
+            </div>
 
-                    </defs>
-                    <g id="img">
-                        <metadata id="CorelCorpID_0Corel-Layer" />
-                        <g id="_1868403189424">
-                            <path class="fil0"
-                                d="M1.77 1.52c0.11,0 0.21,0.09 0.21,0.21 0,0.11 -0.09,0.21 -0.21,0.21 -0.11,0 -0.21,-0.09 -0.21,-0.21 0,-0.11 0.09,-0.21 0.21,-0.21zm0 0.34l0 0c0.08,0 0.14,-0.06 0.14,-0.14 0,-0.08 -0.06,-0.14 -0.14,-0.14 -0.08,0 -0.14,0.06 -0.14,0.14 0,0.08 0.06,0.14 0.14,0.14z" />
-                            <path class="fil0"
-                                d="M0.96 1.52c0.11,0 0.21,0.09 0.21,0.21 0,0.11 -0.09,0.21 -0.21,0.21 -0.11,0 -0.21,-0.09 -0.21,-0.21 0,-0.11 0.09,-0.21 0.21,-0.21zm0 0.34l0 0c0.08,0 0.14,-0.06 0.14,-0.14 0,-0.08 -0.06,-0.14 -0.14,-0.14 -0.08,0 -0.14,0.06 -0.14,0.14 0,0.08 0.06,0.14 0.14,0.14z" />
-                            <path class="fil0"
-                                d="M0.06 0l0 0.03 0.41 0 0.13 0.34 1.65 0 -0.31 1.08 -1.18 0 -0.31 -1.08 0.08 0 -0.11 -0.26 -0.41 0 0 -0.1 0.06 0zm1.25 0.43l0 0c-0.12,0 -0.24,0 -0.35,0l0.04 0.29 0.31 0 0 -0.29zm0.85 0l0 0c-0.04,0 -0.18,0 -0.36,0l-0.03 0.29 0.31 0c0.04,-0.13 0.07,-0.25 0.08,-0.29zm-0.1 0.35l0 0 -0.3 0 -0.03 0.28 0.26 0c0.03,-0.09 0.05,-0.19 0.08,-0.28zm-0.17 0.6l0 0c0.01,-0.03 0.04,-0.14 0.08,-0.27l-0.25 0 -0.03 0.27c0.1,0 0.18,0 0.21,0zm-0.52 0l0 0c0.09,0 0.18,0 0.26,0l0.03 -0.27 -0.3 0 0 0.27zm0 -0.32l0 0 0.3 0 0.04 -0.28 -0.34 0 0 0.28zm0 -0.34l0 0 0.34 0 0.04 -0.29c-0.12,0 -0.25,0 -0.38,0l0 0.29zm-0.28 0.66l0 0c0.07,0 0.14,0 0.22,0l0 -0.27 -0.26 0 0.04 0.27zm0.22 -0.32l0 0 0 -0.28 -0.3 0 0.04 0.28 0.26 0zm-0.5 0.32l0 0c0.02,0 0.11,0 0.22,0l-0.04 -0.27 -0.25 0c0.04,0.14 0.07,0.25 0.08,0.27zm-0.09 -0.32l0 0 0.26 0 -0.04 -0.28 -0.3 0c0.03,0.09 0.05,0.19 0.08,0.28zm-0.1 -0.34l0 0 0.31 0 -0.04 -0.29c-0.17,0 -0.31,0 -0.35,0 0.01,0.05 0.05,0.16 0.08,0.29z" />
+            <div class="three columns">
+                <a href="coscumparaturi.html" id="shopButton">
+                    <svg xmlns="http://www.w3.org/2000/svg" xml:space="preserve" width="11mm" height="5mm" version="1.1"
+                        style="shape-rendering:geometricPrecision; text-rendering:geometricPrecision; image-rendering:optimizeQuality; fill:white; fill-rule:evenodd; clip-rule:evenodd"
+                        viewBox="0 0 2.24 1.93" xmlns:xlink="http://www.w3.org/1999/xlink">
+                        <defs>
+
+                        </defs>
+                        <g id="img">
+                            <metadata id="CorelCorpID_0Corel-Layer" />
+                            <g id="_1868403189424">
+                                <path class="fil0"
+                                    d="M1.77 1.52c0.11,0 0.21,0.09 0.21,0.21 0,0.11 -0.09,0.21 -0.21,0.21 -0.11,0 -0.21,-0.09 -0.21,-0.21 0,-0.11 0.09,-0.21 0.21,-0.21zm0 0.34l0 0c0.08,0 0.14,-0.06 0.14,-0.14 0,-0.08 -0.06,-0.14 -0.14,-0.14 -0.08,0 -0.14,0.06 -0.14,0.14 0,0.08 0.06,0.14 0.14,0.14z" />
+                                <path class="fil0"
+                                    d="M0.96 1.52c0.11,0 0.21,0.09 0.21,0.21 0,0.11 -0.09,0.21 -0.21,0.21 -0.11,0 -0.21,-0.09 -0.21,-0.21 0,-0.11 0.09,-0.21 0.21,-0.21zm0 0.34l0 0c0.08,0 0.14,-0.06 0.14,-0.14 0,-0.08 -0.06,-0.14 -0.14,-0.14 -0.08,0 -0.14,0.06 -0.14,0.14 0,0.08 0.06,0.14 0.14,0.14z" />
+                                <path class="fil0"
+                                    d="M0.06 0l0 0.03 0.41 0 0.13 0.34 1.65 0 -0.31 1.08 -1.18 0 -0.31 -1.08 0.08 0 -0.11 -0.26 -0.41 0 0 -0.1 0.06 0zm1.25 0.43l0 0c-0.12,0 -0.24,0 -0.35,0l0.04 0.29 0.31 0 0 -0.29zm0.85 0l0 0c-0.04,0 -0.18,0 -0.36,0l-0.03 0.29 0.31 0c0.04,-0.13 0.07,-0.25 0.08,-0.29zm-0.1 0.35l0 0 -0.3 0 -0.03 0.28 0.26 0c0.03,-0.09 0.05,-0.19 0.08,-0.28zm-0.17 0.6l0 0c0.01,-0.03 0.04,-0.14 0.08,-0.27l-0.25 0 -0.03 0.27c0.1,0 0.18,0 0.21,0zm-0.52 0l0 0c0.09,0 0.18,0 0.26,0l0.03 -0.27 -0.3 0 0 0.27zm0 -0.32l0 0 0.3 0 0.04 -0.28 -0.34 0 0 0.28zm0 -0.34l0 0 0.34 0 0.04 -0.29c-0.12,0 -0.25,0 -0.38,0l0 0.29zm-0.28 0.66l0 0c0.07,0 0.14,0 0.22,0l0 -0.27 -0.26 0 0.04 0.27zm0.22 -0.32l0 0 0 -0.28 -0.3 0 0.04 0.28 0.26 0zm-0.5 0.32l0 0c0.02,0 0.11,0 0.22,0l-0.04 -0.27 -0.25 0c0.04,0.14 0.07,0.25 0.08,0.27zm-0.09 -0.32l0 0 0.26 0 -0.04 -0.28 -0.3 0c0.03,0.09 0.05,0.19 0.08,0.28zm-0.1 -0.34l0 0 0.31 0 -0.04 -0.29c-0.17,0 -0.31,0 -0.35,0 0.01,0.05 0.05,0.16 0.08,0.29z" />
+                            </g>
                         </g>
-                    </g>
-                </svg> Cos cumparaturi</button>
+                    </svg>
+                    Cos cumparaturi
+                </a>
+            </div>
         </div> </br> </br>
 
         <div id="drawTable">
