--- a/PROIECT FINAL/bazar.html
+++ b/PROIECT FINAL/bazar.html
@@ -6,21 +6,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Bazar online</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/skeleton/2.0.4/skeleton.css"
+        integrity="sha256-ECB9bbROLGm8wOoEbHcHRxlHgzGqYpDtNTgDTyDz0wg=" crossorigin="anonymous" />
     <link rel="stylesheet" type="text/css" href="grid.css">
 
     <style>
-        .backgroundWeb {
+        .container {
             max-width: 80%;
             margin: 0 auto;
         }
 
         #topBar {
-            display: grid;
-            grid-template-columns: 3fr 1fr;
-            grid-column-gap: 20px;
+            display: flex;
+            flex-wrap: wrap;
             height: 60px;
             border-radius: 5px;
             background-color: rgb(0, 94, 184);
+            margin-bottom:20px;
         }
 
         #showProducts {
@@ -32,16 +34,13 @@
             max-width: 90%;
             height: 400px;
             padding: 10px;
-
         }
 
         #topBar #title1 {
             font-family: Verdana, Geneva, Tahoma, sans-serif;
-            margin: 10px 25px;
+            margin: 6px 25px;
             font-size: 30px;
-            background-color: none;
             color: white;
-
         }
 
         #topBar #shopButton {
@@ -51,7 +50,22 @@
             font-size: 25px;
             text-decoration: none;
             margin: auto;
-            
+            text-align: center;
+        }
+
+        #topBar #adminButton {
+            font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+            font-size: 25px;
+            color:white;
+            text-decoration: none;
+        }
+        .eight.columns{
+            height: 60px;
+        }
+
+        .four.columns {
+            margin:  auto;
+            margin-right: 25px;
         }
 
         #cartImg {
@@ -60,34 +74,22 @@
             margin-right: 10px;
         }
 
-        #topBar #adminButton {
-            width: 120px;
-            border-radius: 5px;
-            border: solid lightgrey 1px;
-            background-color: white;
-            font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-            font-size: 20px;
-            height: 40px;
-            margin: 0 auto;
-
-        }
-
         #showProducts .imgProd {
             max-width: 280px;
             max-height: 280px;
         }
 
-        .backgroundWeb #showProducts .product #imgBox {
+        .container #showProducts .product #imgBox {
             text-align: center;
             margin-top: 5px;
         }
 
-        .backgroundWeb #showProducts .product #bottomBox {
+        .container #showProducts .product #bottomBox {
             text-align: center;
             margin-bottom: 7px;
         }
 
-        .backgroundWeb #showProducts #nameObj {
+        .container #showProducts #nameObj {
             font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
             font-size: 25px;
             margin: 5px;
@@ -95,19 +97,20 @@
 
         }
 
-        .backgroundWeb #showProducts .product #bottomBox {
+        .container #showProducts .product #bottomBox {
             font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
             font-size: 30px;
 
         }
 
-        .backgroundWeb #showProducts .product #bottomBox #detailsBottom {
+        .container #showProducts .product #bottomBox #detailsBottom {
             height: 35px;
             width: 100px;
-            margin-bottom: 5px;
+            margin: auto;
             border-radius: 5px;
             background-color: white;
             border: solid lightgrey 1px;
+            padding: 0px 10px;
         }
 
         .boxBorder {
@@ -151,15 +154,15 @@
 </head>
 
 <body onload="draw();">
-    <div class="backgroundWeb";>
-        <div id="topBar">
-            <div>
-                <p id="title1">Bazar la Andi</p>
+    <div class="container">
+        <div id="topBar" class="row">
+            <div class="eight columns">
+                <p id="title1">Andi`s Market</p>
             </div>
-            <div>
-                <button onclick="location.href='coscumparaturi.html'" id="shopButton"> <svg
-                        xmlns="http://www.w3.org/2000/svg" xml:space="preserve" width="10.7963mm" height="5mm"
-                        version="1.1"
+
+            <div class="four columns">
+                <a href="coscumparaturi.html" id="shopButton">
+                    <svg xmlns="http://www.w3.org/2000/svg" xml:space="preserve" width="11mm" height="5mm" version="1.1"
                         style="shape-rendering:geometricPrecision; text-rendering:geometricPrecision; image-rendering:optimizeQuality; fill:white; fill-rule:evenodd; clip-rule:evenodd"
                         viewBox="0 0 2.24 1.93" xmlns:xlink="http://www.w3.org/1999/xlink">
                         <defs>
@@ -176,25 +179,23 @@
                                     d="M0.06 0l0 0.03 0.41 0 0.13 0.34 1.65 0 -0.31 1.08 -1.18 0 -0.31 -1.08 0.08 0 -0.11 -0.26 -0.41 0 0 -0.1 0.06 0zm1.25 0.43l0 0c-0.12,0 -0.24,0 -0.35,0l0.04 0.29 0.31 0 0 -0.29zm0.85 0l0 0c-0.04,0 -0.18,0 -0.36,0l-0.03 0.29 0.31 0c0.04,-0.13 0.07,-0.25 0.08,-0.29zm-0.1 0.35l0 0 -0.3 0 -0.03 0.28 0.26 0c0.03,-0.09 0.05,-0.19 0.08,-0.28zm-0.17 0.6l0 0c0.01,-0.03 0.04,-0.14 0.08,-0.27l-0.25 0 -0.03 0.27c0.1,0 0.18,0 0.21,0zm-0.52 0l0 0c0.09,0 0.18,0 0.26,0l0.03 -0.27 -0.3 0 0 0.27zm0 -0.32l0 0 0.3 0 0.04 -0.28 -0.34 0 0 0.28zm0 -0.34l0 0 0.34 0 0.04 -0.29c-0.12,0 -0.25,0 -0.38,0l0 0.29zm-0.28 0.66l0 0c0.07,0 0.14,0 0.22,0l0 -0.27 -0.26 0 0.04 0.27zm0.22 -0.32l0 0 0 -0.28 -0.3 0 0.04 0.28 0.26 0zm-0.5 0.32l0 0c0.02,0 0.11,0 0.22,0l-0.04 -0.27 -0.25 0c0.04,0.14 0.07,0.25 0.08,0.27zm-0.09 -0.32l0 0 0.26 0 -0.04 -0.28 -0.3 0c0.03,0.09 0.05,0.19 0.08,0.28zm-0.1 -0.34l0 0 0.31 0 -0.04 -0.29c-0.17,0 -0.31,0 -0.35,0 0.01,0.05 0.05,0.16 0.08,0.29z" />
                             </g>
                         </g>
-                    </svg> Cos cumparaturi</button>
-            </div>
-            <div>
-                <button onclick="location.href='admin.html'" id="adminButton"> 
-                        <svg xmlns="http://www.w3.org/2000/svg"
-                            xml:space="preserve" width="10.7963mm" height="5mm" version="1.1"
-                            style="shape-rendering:geometricPrecision; text-rendering:geometricPrecision; image-rendering:optimizeQuality; fill-rule:evenodd; clip-rule:evenodd"
-                            viewBox="0 0 0.61 0.82" xmlns:xlink="http://www.w3.org/1999/xlink">
-                            <g id="img">
-                                <metadata id="CorelCorpID_0Corel-Layer" />
-                                <path class="fil0"
-                                    d="M0.53 0.32l0 -0.24c0,-0.05 -0.04,-0.09 -0.09,-0.09l-0.28 0c-0.05,0 -0.09,0.04 -0.09,0.09l0 0.24 -0.08 0 0 0.5 0.61 0 0 -0.5 -0.08 0zm-0.38 -0.16l0 0c0,-0.05 0.04,-0.09 0.09,-0.09l0.12 0c0.05,0 0.09,0.04 0.09,0.09l0 0.16 -0.3 0 0 -0.16zm0.2 0.53l0 0c0,0.03 -0.02,0.05 -0.05,0.05 -0.03,0 -0.05,-0.02 -0.05,-0.05l0 -0.19c0,-0.03 0.02,-0.05 0.05,-0.05 0.03,0 0.05,0.02 0.05,0.05l0 0.19z" />
+                    </svg>
+                    Cos cumparaturi
+                </a>
+
+                <a href="admin.html" id="adminButton">
+                    <svg xmlns="http://www.w3.org/2000/svg" xml:space="preserve" width="11mm" height="5mm" version="1.1"
+                        style="shape-rendering:geometricPrecision; text-rendering:geometricPrecision; image-rendering:optimizeQuality; fill:white; fill-rule:evenodd; clip-rule:evenodd"
+                        viewBox="0 0 0.61 0.82" xmlns:xlink="http://www.w3.org/1999/xlink">
+                        <g id="img">
+                            <metadata id="CorelCorpID_0Corel-Layer" />
+                            <path class="fil0"
+                                d="M0.53 0.32l0 -0.24c0,-0.05 -0.04,-0.09 -0.09,-0.09l-0.28 0c-0.05,0 -0.09,0.04 -0.09,0.09l0 0.24 -0.08 0 0 0.5 0.61 0 0 -0.5 -0.08 0zm-0.38 -0.16l0 0c0,-0.05 0.04,-0.09 0.09,-0.09l0.12 0c0.05,0 0.09,0.04 0.09,0.09l0 0.16 -0.3 0 0 -0.16zm0.2 0.53l0 0c0,0.03 -0.02,0.05 -0.05,0.05 -0.03,0 -0.05,-0.02 -0.05,-0.05l0 -0.19c0,-0.03 0.02,-0.05 0.05,-0.05 0.03,0 0.05,0.02 0.05,0.05l0 0.19z" />
                         </g>
                     </svg> Admin
-                </button>
+                </a>
             </div>
         </div>
-
-
         <div id="showProducts"></div>
     </div>
 </body>
